--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "cSpell.language": ",es"
+	"cSpell.language": "es,es-ES",
+	"cSpell.words": ["arrows", "clickable", "pagination", "slider"]
 }
