agregando productos y contacto

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,10 @@
 {
 	"cSpell.language": "es,es-ES",
-	"cSpell.words": ["arrows", "clickable", "pagination", "slider"]
+	"cSpell.words": [
+		"arrows",
+		"clickable",
+		"dinámicamente",
+		"pagination",
+		"slider"
+	]
 }
